Replaced new Integer() call with valueOf().